<?xml version="1.0" encoding="utf-8"?>
<com.hayashibambi.kryptos.bottomsheetfamilylayout.BottomSheetFamilyLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/root_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
        app:layout_hostBottomSheet="@id/sheet">

    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/sheet"
                 app:layout_behavior="@string/host_bottom_sheet_behavior"
                 android:background="@color/colorAccent"
                 app:behavior_peekHeight="200dp"
                 app:behavior_hideable="true"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="56dp"
              android:text="@string/app_name"
              android:textSize="18sp"
              android:paddingStart="24dp"
              android:textColor="#ffffff"
              android:paddingEnd="0dp"
              android:id="@+id/title_bar"
              android:gravity="center_vertical"
              android:background="#ff00ff"
              app:layout_behavior="@string/linkage_alpha_behavior"
              app:behavior_valueOnDependencyCollapsed="1.0"
              app:behavior_valueOnDependencyExpanded="0.0"
              app:behavior_valueOnDependencyHidden="0.5"/>

    <com.hayashibambi.kryptos.UpDownArrow
            android:layout_width="56dp"
            android:layout_height="56dp"
    android:layout_gravity="end"
    app:upa_arrowWidth="24dp"
    app:upa_arrowHeight="14dp"
    app:upa_arrowThickness="4dp"
    app:upa_richDrawing="false"
    app:upa_mode="cross"
    app:layout_behavior="@string/linkage_property_behavior"
            app:behavior_valueOnDependencyCollapsed="1.0"
            app:behavior_valueOnDependencyExpanded="0.3"
            app:behavior_valueOnDependencyHidden="0.5"
    app:behavior_valueInterpolator="linear"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="56dp"
              android:text="menu 1"
              android:textSize="18sp"
              android:layout_marginStart="88dp"
              android:paddingStart="24dp"
              android:textColor="#ffffff"
              android:paddingEnd="0dp"
              android:id="@+id/menu"
              android:gravity="center_vertical"
              android:background="#ff0000"
              android:layout_marginTop="88dp"
              app:layout_behavior="@string/linkage_rotation_behavior"
              app:behavior_valueOnDependencyCollapsed="0.0"
              app:behavior_valueOnDependencyExpanded="540.0"
              app:behavior_valueOnDependencyHidden="-180.0"/>

</com.hayashibambi.kryptos.bottomsheetfamilylayout.BottomSheetFamilyLayout>